feat: make exams personalized automatically
